@@ -14,8 +14,6 @@ plugin.tx_solr {
 		host   = {$plugin.tx_solr.solr.host}
 		port   = {$plugin.tx_solr.solr.port}
 		path   = {$plugin.tx_solr.solr.path}
-
-		useCurlHttpTransport = 0
 	}
 
 	templateFiles {
