@@ -1,6 +1,7 @@
 2012-08-27  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Removed tx_solr_Util::utf8Decode(), resolves #40256
+	* Removed option to use curl as HTTP transport between TYPO3 and the Solr server, resolves #39493
 
 2012-08-24  Ingo Renner  <ingo.renner@dkd.de>
 
